# timekeep

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile  Makefile.tmp  README.md  SECURITY.md  clippy.toml  deny.toml  docker-compose.yml  rustfmt.toml
.cursor/rules/: no-magic-constants.md  state-patterns.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  scanner_compat.md
.github/workflows/: ci.yml  release.yml
crates/timekeep-api/: Cargo.toml
crates/timekeep-api/src/: app_state.rs  audit.rs  auth.rs  dto.rs  employees.rs  helpers.rs  integration.rs  lib.rs  management.rs  openapi.rs  request.rs  response.rs  users.rs
crates/timekeep-api/src/middleware/: jwt.rs  mod.rs  rate_limiter.rs
crates/timekeep-api/src/routes/: attendance.rs  auth.rs  dashboard.rs  departments.rs  device_groups.rs  device_users.rs  devices.rs  employee_enrollments.rs  mod.rs  onboarding.rs  punches.rs  search.rs  sync.rs  work_policy_templates.rs
crates/timekeep-api/tests/: auth.rs  dashboard.rs  departments.rs  device_groups.rs  devices.rs  employees.rs  permissions.rs  punches.rs
crates/timekeep-api/tests/helpers/: mod.rs
crates/timekeep-app/: Cargo.toml
crates/timekeep-app/src/: config.rs  enrollment.rs  fingerprint_transfer.rs  lib.rs  main.rs  outbox_worker.rs  sync.rs  wiring.rs
crates/timekeep-app/src/wiring/: composition.rs  device_connect.rs  event_handlers.rs  mod.rs
crates/timekeep-circuit/: Cargo.toml
crates/timekeep-circuit/src/: lib.rs
crates/timekeep-core/: Cargo.toml
crates/timekeep-core/src/: error.rs  facet.rs  lib.rs  network_scanner.rs  provider_manifest.rs  provider_registry.rs  query.rs  test_utils.rs
crates/timekeep-core/src/events/: domain_events.rs  mod.rs
crates/timekeep-core/src/model/: anomaly.rs  attendance_analytics.rs  audit.rs  dashboard_user.rs  department.rs  device.rs  device_event.rs  device_group.rs  employee.rs  enrollment.rs  iam.rs  mod.rs  onboarding.rs  oplog.rs  pending_delivery.rs  provider.rs  punch.rs  settings.rs  user.rs  user_sync.rs  work_day.rs  work_period.rs  work_policy.rs
crates/timekeep-core/src/query/: cursor.rs  field_selector.rs  filters.rs  mod.rs  schema.rs  search.rs
crates/timekeep-core/src/services/: attendance_calculator.rs  mod.rs  policy_resolver.rs
crates/timekeep-core/src/traits/: api_key_store.rs  audit_log_store.rs  biometric_device.rs  config_provider.rs  dashboard_user_store.rs  department_store.rs  device_config_store.rs  device_group_store.rs  device_info_store.rs  device_user_store.rs  distributor.rs  employee_repository.rs  employee_store.rs  endpoint_store.rs  mod.rs  onboarding_session_store.rs  outbox_store.rs  provider_registry.rs  punch_store.rs  search_store.rs  settings_store.rs  storage.rs  sync_provider.rs
crates/timekeep-dist-odoo/: Cargo.toml
crates/timekeep-dist-odoo/src/: json2.rs  lib.rs  sync.rs
crates/timekeep-dist-webhook/: Cargo.toml
crates/timekeep-dist-webhook/src/: lib.rs
crates/timekeep-engine/: Cargo.toml
crates/timekeep-engine/src/: batch.rs  bus.rs  distribution.rs  health.rs  lib.rs  telemetry.rs
crates/timekeep-engine/src/handlers/: mod.rs  storage.rs  webhook.rs
crates/timekeep-engine/src/pipeline/: dedup.rs  enrich.rs  mod.rs  normalize.rs
crates/timekeep-storage-postgres/: Cargo.toml
crates/timekeep-storage-postgres/src/: api_keys.rs  audit.rs  dashboard.rs  departments.rs  device.rs  device_users.rs  employees.rs  lib.rs  migrations.rs  onboarding.rs  outbox.rs  punch.rs  settings.rs  work_policy_templates.rs
crates/timekeep-storage-sqlite/: Cargo.toml
crates/timekeep-storage-sqlite/src/: api_keys.rs  audit.rs  dashboard.rs  departments.rs  device.rs  device_groups.rs  device_users.rs  employees.rs  endpoints.rs  lib.rs  migrations.rs  onboarding.rs  outbox.rs  punch.rs  settings.rs  work_policy_templates.rs
crates/timekeep-storage-tantivy/: Cargo.toml
crates/timekeep-storage-tantivy/src/: indexer.rs  lib.rs  schema.rs
crates/timekeep-zkteco/: Cargo.toml
crates/timekeep-zkteco/src/: lib.rs  simulator.rs
crates/timekeep-zkteco/src/adms/: mod.rs  parser.rs  queue.rs  types.rs
crates/timekeep-zkteco/src/protocol/: checksum.rs  encoding.rs  mod.rs  packet.rs
crates/timekeep-zkteco/src/sdk/: commands.rs  connection.rs  device.rs  event.rs  mod.rs  parser.rs
crates/timekeep-zkteco/tests/: Open Source AGPL License and Dev Guide Prep  diagnostic.rs  e2e_device_test.rs  e2e_simulator_test.rs  integration_test.rs  oplog_test.rs  set_user_test.rs  simulator_test.rs  transflag_test.rs  user_transfer_test.rs
crates/timekeep-zkteco/tests/simulator/: adms.rs  mod.rs
dashboard/: .commitlintrc.mjs  .dependency-cruiser.mjs  .gitignore  .jscpd.json  .oxlintrc.json  .stylelintrc.json  index.html  knip.json  lingui.config.ts  lint-staged.config.mjs  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vite.config.ts  vitest.config.ts  vitest.setup.browser.ts  vitest.setup.ts  vitest.workspace.ts
dashboard/.storybook/: main.ts  (+5 more)
dashboard/src-tauri/: Cargo.toml  tauri.conf.json
dashboard/src-tauri/capabilities/: default.json
dashboard/src-tauri/icons/: icon.icns
dashboard/src-tauri/src/: lib.rs
deploy/: docker-compose.nas.yml  timekeep.service
docs/: API-AUDIT.md  ARCHITECTURE.md  OVERVIEW.md  PLAN-device-management.md  PLAN-realtime-enrollment.md  ROADMAP.md  user-stories.md  ux-audit-tracker.md
scripts/: audit-detail-config-drift.py  check-nesting-depth.sh  check-tunnels.sh  fill_translations.py  generate-history.py  generate-shared.ts  generate-ui-barrel.ts  seed-dev.sh  test-api.sh
search/: .managed.json  meta.json
shared/: api-error-codes.ts  device-commands.ts  device-event-types.ts  device-statuses.ts  device-vendors.ts  integration-kinds.ts  navigation.ts  paths.ts  permissions.ts  punch-statuses.ts  roles.ts  verify-modes.ts
tests/: adms_device_state.rs  adms_integration.rs  api_integration.rs  architecture.rs  onboarding_store_test.rs  sqlite_integration.rs
(+1370 files in other folders)
