[package]
name = "timekeep-workspace"
edition.workspace = true
version.workspace = true
license.workspace = true
publish = false

[workspace]
resolver = "3"
	members = [
	    "crates/timekeep-circuit",
	    "crates/timekeep-core",
	    "crates/timekeep-engine",
	    "crates/timekeep-zkteco",
	    "crates/timekeep-storage-sqlite",
	    "crates/timekeep-storage-postgres",
	    "crates/timekeep-storage-tantivy",
	    "crates/timekeep-dist-webhook",
	    "crates/timekeep-dist-odoo",
	    "crates/timekeep-api",
	    "crates/timekeep-app",
	]

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "AGPL-3.0"
repository = "https://github.com/skanderphilipp/timekeep"
authors = ["Skander Ben Abdelmalak <skander@bentech.app>"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Time
jiff = { version = "0.2", features = ["default", "serde"] }

# Error handling
thiserror = "2"

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.29"
opentelemetry = { version = "0.28", features = ["metrics"] }
opentelemetry_sdk = { version = "0.28", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.28", features = ["http-proto", "reqwest-client"] }

# Domain events
uuid = { version = "1", features = ["v4", "v7", "serde"] }

# Configuration
toml = "0.8"
serde_with = "3"

# Hash for deduplication
sha2 = "0.10"

# Password hashing (argon2id)
argon2 = "0.5"

# RNG for Argon2 salt generation
rand_core = { version = "0.6", features = ["getrandom"] }

# Async traits (for trait objects with Send bound)
async-trait = "0.1"

# Base64 encoding (cursor pagination)
		base64 = "0.22"

# Compile-time provider registration (inventory)
inventory = "0.3"

		# Network interface detection (local IP / subnet auto-detection)
		local-ip-address = "0.6"

	# Bitflags for permissions
	bitflags = { version = "2", features = ["serde"] }

	# OpenAPI documentation
	utoipa = { version = "5", features = ["axum_extras"] }
	utoipa-swagger-ui = { version = "9", features = ["axum"] }

# Prometheus metrics
axum-prometheus = "0.8"

# JWT authentication
jsonwebtoken = "9"

# Full-text search (Tantivy)
tantivy = "0.26"

# Timekeep-circuit (internal)
	timekeep-circuit = { path = "crates/timekeep-circuit" }

	# Timekeep-core (internal)
	timekeep-core = { path = "crates/timekeep-core" }
timekeep-engine = { path = "crates/timekeep-engine" }
timekeep-zkteco = { path = "crates/timekeep-zkteco" }
timekeep-storage-sqlite = { path = "crates/timekeep-storage-sqlite" }
timekeep-storage-postgres = { path = "crates/timekeep-storage-postgres" }
timekeep-storage-tantivy = { path = "crates/timekeep-storage-tantivy" }
timekeep-dist-webhook = { path = "crates/timekeep-dist-webhook" }
timekeep-dist-odoo = { path = "crates/timekeep-dist-odoo" }
timekeep-api = { path = "crates/timekeep-api" }

[workspace.lints.rust]
# ── Safety ──────────────────────────────────────────────────
unsafe_code = "deny"                         # No unsafe, period
unexpected_cfgs = { level = "deny", check-cfg = ['cfg(tokio_unstable)'] }

# ── Correctness ────────────────────────────────────────────
unreachable_pub = "deny"                     # pub items actually used cross-crate
unused_crate_dependencies = "warn"           # dead deps in Cargo.toml
unused_macro_rules = "deny"                  # dead macros
unused_qualifications = "deny"               # e.g., `std::fmt::Display` → `Display`
unused_results = "deny"                      # ignored Results = bugs
elided_lifetimes_in_paths = "warn"           # be explicit about lifetimes

# ── Documentation ──────────────────────────────────────────
missing_docs = "deny"                        # every pub item must be documented

# ── Deprecation awareness ──────────────────────────────────
deprecated = "deny"                          # no using deprecated APIs

[workspace.lints.rustdoc]
missing_crate_level_docs = "deny"            # every crate needs //! doc
broken_intra_doc_links = "deny"              # broken doc links fail build

[workspace.lints.clippy]
# ── Correctness (deny = compile error) ─────────────────────
dbg_macro = "deny"                          # no dbg!() in production
todo = "deny"                               # no todo!() in production
unimplemented = "deny"
unwrap_used = "deny"                        # force proper error handling
expect_used = "deny"                        # force proper error handling
panic = "deny"                              # library code must not panic
indexing_slicing = "deny"                   # use .get() instead of [index]
string_slice = "deny"                       # slicing strings is UB-prone
unchecked_duration_subtraction = "deny"
cast_possible_truncation = "deny"           # u64 → u32 needs explicit check
cast_sign_loss = "deny"                     # i32 → u32 loses sign info
cast_possible_wrap = "deny"                 # integer overflow on cast
cast_lossless = "warn"                      # unnecessary casts
cast_precision_loss = "deny"                # f64 → f32 loses precision

# ── Style ──────────────────────────────────────────────────
print_stdout = "deny"                       # use tracing, not println!
print_stderr = "deny"                       # use tracing, not eprintln!
implicit_clone = "deny"                     # .clone() on Copy types
redundant_clone = "deny"
clone_on_ref_ptr = "deny"                   # cloning an Arc when you can clone the inner
inefficient_to_string = "deny"              # use .to_owned() for &str
manual_assert = "deny"                      # if !cond { panic!() } → assert!()
needless_pass_by_value = "warn"             # pass large types by reference
or_fun_call = "deny"                        # .unwrap_or(FnCall()) allocates eagerly

# ── Complexity ─────────────────────────────────────────────
cognitive_complexity = "warn"               # functions that are too complex
too_many_arguments = "warn"                 # >7 args = refactor into struct
type_complexity = "warn"                    # deeply nested generics

# ── Perf ───────────────────────────────────────────────────
large_stack_frames = "warn"                 # async tasks on stack
mutex_atomic = "deny"                       # Mutex<bool> → AtomicBool
redundant_async_block = "deny"             # unnecessary async {}

# ── Allowed (explicit exceptions) ──────────────────────────
large_enum_variant = "allow"                # domain enums have variant-size differences
module_inception = "allow"                  # e.g., model::model is fine
too_many_lines = "allow"                    # some files are large (until refactored)

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = "z"
[dev-dependencies]
tokio = { workspace = true }
serde_json = { workspace = true }
jiff = { workspace = true }
serde = { workspace = true }
tempfile = "3"
axum = "0.8"
tower = "0.5"
timekeep-core = { workspace = true, features = ["test-utils"] }
timekeep-storage-sqlite = { workspace = true }
timekeep-api = { workspace = true }
timekeep-engine = { workspace = true }
