[package]
name = "timekeep-api"
edition = { workspace = true }
version = { workspace = true }
license = { workspace = true }

[dependencies]
timekeep-core = { workspace = true }
timekeep-engine = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
axum = { version = "0.8", features = ["macros"] }
axum-prometheus = { workspace = true }
jsonwebtoken = { workspace = true }
jiff = { workspace = true }
tower-http = { version = "0.6", features = ["limit"] }
base64 = { workspace = true }
uuid = { workspace = true }
csv = "1.3"
rust_xlsxwriter = "0.82"
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true }

[dev-dependencies]
tower = "0.5"
async-trait = { workspace = true }
serde_urlencoded = "0.7"
