[package]
name = "timekeep"
edition = { workspace = true }
version = { workspace = true }
license = { workspace = true }

[dependencies]
timekeep-core = { workspace = true }
timekeep-engine = { workspace = true }
timekeep-circuit = { workspace = true }
timekeep-zkteco = { workspace = true }
timekeep-storage-sqlite = { workspace = true }
timekeep-storage-postgres = { workspace = true }
timekeep-storage-tantivy = { workspace = true }
timekeep-dist-webhook = { workspace = true }
timekeep-dist-odoo = { workspace = true }
timekeep-api = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
axum = { version = "0.8" }
async-trait = { workspace = true }
rust-embed = "8"
mime_guess = "2"
tower-http = { version = "0.6", features = ["fs"] }
jiff = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
uuid = { workspace = true }
clap = { version = "4", features = ["derive"], optional = true }
rand = { version = "0.8", optional = true }
rand_distr = { workspace = true, optional = true }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"], optional = true }

[features]
default = []
seed = ["dep:clap", "dep:rand", "dep:rand_distr", "dep:sqlx"]

[[bin]]
name = "seed"
path = "src/bin/seed.rs"
required-features = ["seed"]

[dev-dependencies]
tokio = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
tempfile = "3"
tower = "0.5"
timekeep-core = { workspace = true, features = ["test-utils"] }
timekeep-storage-sqlite = { workspace = true }
timekeep-api = { workspace = true }
timekeep-engine = { workspace = true }
