[package]
name = "timekeep-circuit"
edition = { workspace = true }
version = { workspace = true }
license = { workspace = true }

[dependencies]
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
