[package]
name = "timekeep-dist-odoo"
edition = { workspace = true }
version = { workspace = true }
license = { workspace = true }

[dependencies]
timekeep-circuit = { workspace = true }
timekeep-core = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
jiff = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
