[package]
name = "timekeep-dist-webhook"
edition = { workspace = true }
version = { workspace = true }
license = { workspace = true }

[dependencies]
timekeep-core = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
jiff = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
axum = { version = "0.8" }
