[package]
name = "timekeep-engine"
edition = { workspace = true }
version = { workspace = true }
license = { workspace = true }

[dependencies]
timekeep-core = { workspace = true }
timekeep-circuit = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-opentelemetry = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-otlp = { workspace = true }
jiff = { workspace = true }
uuid = { workspace = true }
