[package]
name = "timekeep-storage-postgres"
edition = { workspace = true }
version = { workspace = true }
license = { workspace = true }

[dependencies]
timekeep-core = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
jiff = { workspace = true }
serde_json = { workspace = true }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres"] }

[dev-dependencies]
tokio = { workspace = true }
