[package]
name = "timekeep-desktop"
version = "0.1.0"
description = "TimeKeep — Device Data Collection & Attendance Management Desktop App"
authors = ["Skander Ben Abdelmalak <skander@bentech.app>"]
license = "AGPL-3.0"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-log = "2"
